@@ -1,3 +1,8 @@
+2010-01-11  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/lib/cairo/color.rb: add Color::RGB#==, Color::RGB#hash,
+	Color::RGB#eql?.
+
 2009-12-13  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rb_cairo.c: 1.8.0 -> 1.8.1.
